// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles timers 1`] = `
<Icon
  allowFontScaling={false}
  color="white"
  name="pause"
  size={36}
  style={
    Array [
      Object {},
      Object {
        "marginLeft": -5,
        "marginTop": -5,
      },
    ]
  }
/>
`;

exports[`handles timers 2`] = `"0:50"`;

exports[`handles timers 3`] = `
<Icon
  allowFontScaling={false}
  color="white"
  name="play"
  size={36}
  style={
    Array [
      Object {},
      Object {
        "marginLeft": -5,
        "marginTop": -5,
      },
    ]
  }
/>
`;

exports[`handles timers 4`] = `"0:00"`;

exports[`renders as expected 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <StatusBarEffect
    barStyle="light-content"
    navigation={Object {}}
  />
  <KeepAwake />
  <FloatingNav
    floating={true}
    navigation={Object {}}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginBottom": 8,
        "marginTop": 20,
      }
    }
  >
    <Animated.Text
      id="timeRemaining"
      style={
        Array [
          Object {
            "color": "#f00",
          },
          Object {
            "fontSize": 0,
            "opacity": "Value",
          },
        ]
      }
    >
      0:00
    </Animated.Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "maxHeight": 180,
        "maxWidth": 500,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginHorizontal": 16,
          "marginTop": 24,
        }
      }
    >
      <Button
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        Reset
      </Button>
      <FAB
        icon={[Function]}
        key="playPause_false"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "marginHorizontal": 16,
          }
        }
      />
      <Button
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        +0:10
      </Button>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginHorizontal": 16,
          "marginTop": 24,
        }
      }
    >
      <Button
        id={60}
        key="60"
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        +1
      </Button>
      <Button
        id={300}
        key="300"
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        +5
      </Button>
      <Button
        id={600}
        key="600"
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        +10
      </Button>
      <Button
        id={1800}
        key="1800"
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        +30
      </Button>
    </View>
  </View>
</View>
`;
